# workspace-portal

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
containers/fuse-e2e/: Containerfile
docs/: security.md  workspace-portal.md
docs/proposals/: default-permissions-with-allow-other.md  disable-hard-links.md  edit-command.md  fix-optimistic-control-fallback.md  flush-without-fsync.md  fuse-cache-invalidation.md  immutable-path-segments.md  nosymfollow-portal-mount.md  readlink-edit-config-policy.md  remove-follow-symlinks-flags.md  remove-hard-revocation.md  scoped-hard-links-and-hardlink-audit.md  setattr-timestamps.md  statfs-real-space.md  symlink-confinement.md  symlink-creation.md  symlink-escape-audit.md  toml-edit-config.md
scripts/: fuse-e2e-podman.sh  fuse-e2e.sh
src/: cli.rs  daemon.rs  error.rs  fs.rs  lib.rs  main.rs  paths.rs  protocol.rs  state.rs
src/daemon/: background.rs  edit_config.rs  entry_format.rs  mount.rs  output.rs  runtime.rs  workspace.rs
src/fs/: attr.rs  callbacks.rs  path.rs  resolve.rs  runtime.rs  safe_open.rs
tests/: control_plane.rs  fuse_e2e.rs
