[package]
name = "workspace-portal"
version = "0.1.7"
edition = "2024"
license = "MIT"

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
fuser = { version = "0.17", default-features = false }
libc = "0.2"
nix = { version = "0.31", features = ["user"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
